--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="btnRock">Rock</button>
-    <button id="btnPaper">Paper</button>
-    <button id="btnScissors">Scissors</button>
+    <button class ="button"  id="btnRock">Rock</button>
+    <button class ="button"  id="btnPaper">Paper</button>
+    <button class ="button"  id="btnScissors">Scissors</button>
+
+    <label for="roundNo" id="roundNo">Round Starting</label>
+    <br>
+    <label for="playerLbl" id="playerLbl">Player: </label>
+    <br>
+    <label for="computerLbl" id="computerLbl">Computer: </label>
+    <br>
+    <br>
+    <label for="winLbl" id="winLbl"></label>
+    <br>
+    <br>
+    <label for="scoreLbl" id="scoreLbl">Player: 0 || Computer: 0 || Draw: 0</label>
+    <br>
+    <label for="youWin" id="youWin"></label>
+    <br>
+    <label for="compWin" id="compWin"></label>
+
+    <button onClick="window.location.reload();">Play Again!</button>
+
 
     <script src="game.js">
        
